--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,9 @@
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
+    <script src="scripts/services/services.js"></script>
     <script src="scripts/controllers/main.js"></script>
+    <script src="scripts/controllers/create.js"></script>
     <script src="scripts/controllers/about.js"></script>
     <script src="scripts/controllers/contact.js"></script>
     <!-- endbuild -->
@@ -29,7 +31,7 @@
     <!-- endbuild -->
       
     <!-- build:css(.tmp) styles/main.css -->
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="css/main.css">
     <!-- endbuild -->
   </head>
   <body>
@@ -54,6 +56,7 @@
 
             <ul class="nav navbar-nav">
               <li class="active"><a href="#/">Home</a></li>
+              <li class="active"><a href="#/create">Create</a></li>
               <li><a ng-href="#/about">About</a></li>
               <li><a ng-href="#/contact">Contact</a></li>
             </ul>
